# moderna_variant_error

./: CMakeLists.txt  README.md
src/: variant_error.ccm
tests/: tests.cpp
